<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">三明职业技术学院图书馆</string>
    <string name="action_settings">通知公告</string>
    <string name="zx_phone">咨询电话:     02366879630</string>
    <string name="main_guide">入馆指南</string>
    <string name="main_search">馆藏查询</string>
    <string name="main_server">读者服务</string>
    <string name="main_ebook">电子资源</string>
    <string name="main_readingguide">推荐阅读</string>
    <string name="main_bookcomment"></string>
    <string name="main_periodical">期刊大全</string>
    <string name="main_reference">参考咨询</string>
    <string name="main_messinfo">信息素养</string>
    <string name="main_ebookstore">个人中心</string>
    <string name="main_notice">馆内公告</string>
    <string name="main_borrow">借阅管理</string>
    <string name="main_order">书友圈</string>
    <string name="guide_needknow1">报刊阅览室管理规则</string>
    <string name="guide_needknow2">借阅权限和时限</string>
    <string name="guide_needknow3">特藏文献借阅规则</string>
    <string name="guide_needknow4">纸质文献借阅规则</string>
    <string name="guide_needknow5">图书馆、阅览室开放时间</string>
    <string name="guide_needknow6">入 馆 须 知</string>
    <string name="guide_cardguide">办证指南</string>
    <string name="guide_time">开馆时间</string>
    <string name="guide_readerknow">读者须知</string>
    <string name="guide_server">联系方式</string>
    <string name="guide_transport">交通指南</string>
    <string name="guide_navigation">馆内导航</string>
    <string name="guide_problem">馆藏介绍</string>
    <string name="title_activity_entance_guide">入馆指南</string>
    <string name="title_activity_book_search">馆藏查询</string>
    <string name="title_activity_reader_service">读者服务</string>
    <string name="serv_readerinfo">读者信息</string>
    <string name="serv_favorite">我的收藏</string>
    <string name="mycomments">我的书评</string>
    <string name="serv_logout">注销</string>
    <string name="serv_myattention">我的关注</string>
    <string name="serv_bookorder">图书预约</string>
    <string name="serv_myintroduceread">我的荐读</string>
    <string name="serv_myintroducebuy">我的荐购</string>
    <string name="serv_myquestion">我的提问</string>
    <string name="serv_download">下载管理</string>
    <string name="serv_borrow">借阅管理</string>
    <string name="title_activity_ebook_activiy">电子资料</string>
    <string name="title_activity_result_for_search">查询结果</string>
    <string name="title_activity_suggested_reading">推荐阅读</string>
    <string name="title_activity_ref_service">参考咨询</string>
    <string name="title_activity_personal_center">个人中心</string>
    <string name="title_activity_announce">馆内公告</string>
    <string name="title_activity_borrow_and_order">借阅管理</string>
    <string name="title_activity_group_of_readers">书友圈</string>
    <string name="suggestread_proffession">专家推荐</string>
    <string name="suggestread_hotbook">热门图书</string>
    <string name="suggestread_topcomment">热门评论</string>
    <string name="suggestread_rank">借阅排行</string>
    <string name="suggestread_ebookrand">电子资源下载排行</string>
    <string name="suggestread_newbook">新书推荐</string>
    <string name="announce_innermove">馆内动态</string>
    <string name="announce_out">新闻动态</string>
    <string name="announce_inneractive">馆内活动</string>
    <string name="announce_speech">讲座安排</string>
    <string name="free_speech">公益讲座</string>
    <string name="floor_1">一楼</string>
    <string name="floor_2">二楼</string>
    <string name="floor_3">三楼</string>
    <string name="floor_4">四楼</string>
    <string name="floor_5">五楼</string>
    <string name="floor_6">六楼</string>
    <string name="floor_7">七楼</string>
    <string name="floor_8">八楼</string>
    <string name="floor_9">九楼</string>
    <string name="item_author">作者：</string>
    <string name="item_publish">出版社：</string>
    <string name="item_describe">简介：</string>
    <string name="author_item">&lt;b>作&#160;&#160;&#160;&#160;者：&lt;/b></string>
    <string name="publish_item">&lt;b>出版社：&lt;/b></string>
    <string name="describe_item">&lt;b>简&#160;&#160;&#160;&#160;介：&lt;/b></string>
    <string name="item_classno">分类号：</string>
    <string name="item_subject">关键字：</string>
    <string name="item_time">出版时间：</string>
    <string name="item_comment_count">评论</string>
    <string name="item_barcode">条码号：</string>
    <string name="item_callno">索取号：</string>
    <string name="item_loc">馆藏地址：</string>
    <string name="item_status">状态：</string>
    <string name="item_volume">期卷：</string>
    <string name="item_cirtype">流通类别：</string>
    <string name="item_price">价格：</string>
    <string name="item_size">大小：</string>
    <string name="item_brtime">借出日期：</string>
    <string name="item_retime">还回日期：</string>
    <string name="item_renew">续借..</string>
    <string name="alreadyrenew">(已续借)</string>
    <string name="beginrenew">开始续借</string>
    <string name="title_activity_detail_text">DetailTextActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_welcome">WelcomeActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_result_on_search">ResultOnSearchActivity</string>
    <string name="title_activity_detail_book">DetailBookActivity</string>
    <string name="title_section1">馆藏资源</string>
    <string name="title_section2">维普中刊</string>
    <string name="title_section3">文档</string>
    <string name="title_section4">多媒体</string>
    <string name="title_tips">提示</string>
    <string name="confirm_quit">确定注销此账号?</string>
    <string name="confirm_ok">确定</string>
    <string name="confirm_cancel">取消</string>
    <string name="ebook_page">页数：</string>
    <string name="ebook_orang">来源：</string>
    <string name="ebook_type">格式：</string>
    <string name="ebook_author">作者：</string>
    <string name="ebook_abstrac">简介：</string>
    <string name="ebook_orang_item">&lt;b>来源：&lt;/b></string>
    <string name="ebook_author_item">&lt;b>作者：&lt;/b></string>
    <string name="ebook_abstrac_item">&lt;b>简介：&lt;/b></string>
    <string name="ebook_time">刊号：</string>
    <string name="no_result">没有找到相关结果\n试试别的关键字吧!</string>
    <string name="no_borrow">您没有借阅书籍信息!</string>
    <string name="book_detail">详细</string>
    <string name="book_comment">书评</string>
    <string name="title_moredetail">详细信息</string>
    <string name="title_FAQ">问题解答</string>
    <string name="title_cnno">国内统一刊号：</string>
    <string name="title_issn">国际标准刊号：</string>
    <string name="title_perio_chiefdept">主管单位：</string>
    <string name="title_perio_publisher">主办单位：</string>
    <string name="title_perio_chiefeditor">主　　编：</string>
    <string name="title_perio_type">期刊/开本：</string>
    <string name="title_perio_remark">简介：</string>

    <!-- 异常提示 -->
    <string name="loginfail">登录失败</string>
    <string name="loadfail">网络不给力</string>
    <string name="renewfail">续借失败</string>
    <string name="modifyfail">修改失败</string>
    <string name="favorfail">收藏失败</string>
    <string name="addfail">添加失败</string>
    <string name="add_favorite">收藏</string>
    <string name="already_favoriate">已收藏</string>
    <string name="favorsucess">收藏成功</string>
    <string name="imageview_description">Image Thumbnail</string>
    <string name="no_network_connection_toast">联网失败，请检查网络！</string>
    <string name="cancelfavorfail">取消收藏失败</string>
    <string name="cancelcommentfail">删除评论失败</string>
    <string name="cancelcommentdone">删除评论成功</string>
    <string name="title_activity_advanced_book">AdvancedBookActivity</string>
    <string name="title_activity_detail_advanced_book">DetailAdvancedBookActivity</string>
    <string name="title_activity_annouce_list">AnnouceListActivity</string>
    <string name="need_pwd">请输入密码</string>
    <string name="need_username">请输入用户名</string>
    <string name="title_activity_big_img">BigImgActivity</string>
    <string name="title_activity_down_load_manager">下载管理</string>
    <string name="download_notification_title">下载</string>
    <string name="tips_begin_download">文件已加入下载列队，开始下载</string>
    <string name="tips_fail_download">下载失败</string>
    <string name="tips_unable_download">该文件暂时不能下载</string>
    <string name="tips_nomore_data">没有更多内容可供加载</string>
    <string name="tips_nomore_page">已经最后一页了</string>
    <string name="title_activity_periodical_classfy">PeriodicalClassfyActivity</string>
    <string name="title_activity_periodical_list">PeriodicalListActivity</string>
    <string name="title_activity_periodical_topic_detail">PeriodicalTopicDetailActivity</string>
    <string name="title_activity_periodical_content">PeriodicalContentActivity</string>
    <string name="title_activity_periodical_center">PeriodicalCenterActivity</string>
    <string name="drop_down_list_header_default_text">点击可以刷新&#8230;</string>
    <string name="drop_down_list_header_pull_text">下拉可以刷新</string>
    <string name="drop_down_list_header_release_text">松开进行刷新</string>
    <string name="drop_down_list_header_loading_text">加载中&#8230;</string>
    <string name="drop_down_list_footer_default_text">更多</string>
    <string name="drop_down_list_footer_loading_text">加载中&#8230;</string>
    <string name="drop_down_list_footer_no_more_text">没有更多内容可供加载</string>
    <string name="update_at">更新于：</string>
    <string name="lecture_source">深职院大讲堂：</string>
    <string name="tips_periodical_null">抱歉！该杂志暂未被《中文科技期刊数据库》收录，请直接联系期刊社！期刊社联系电话：010－64294171 64294139</string>
    <string name="tips_nosearch_key">请输入搜索内容</string>
    <string name="title_activity_message_info">MessageInfoActivity</string>
    <string name="disable_onclick">该功能正在紧张开发中&#8230;</string>
    <string name="tips_undo">该功能将在近期开发，敬请期待&#8230;</string>
    <string name="hint_search">请输入关键词搜索</string>
    <string name="annouce_annouce">通知公告</string>
    <string name="announce_subject">专题讲座</string>
    <string name="announce_professor">专家讲座</string>
    <string name="btn_cancel">取消</string>
    <string name="btn_confirm">确定</string>
    <string name="login_title">读者登陆</string>
    <string name="login_username">借阅卡号：</string>
    <string name="login_password">借阅密码：</string>
    <string name="btn_login">登陆</string>
    <string name="dialog_pick_confirm">确  定</string>
    <string name="dialog_pick_title">请选择期刊期数</string>
    <string name="title_activity_zlfbook_detail">ZLFBookDetailActivity</string>
    
    
</resources>
